[tool.poetry]
name = "fastism"
version = "0.5.0"
description = "Fast In-silico Mutagenesis for Convolution-based Neural Networks"
authors = ["Surag Nair <surag@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.0"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
